Se agrega Ayuda contextual

--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -557,10 +557,8 @@
 					</div>-->
 					<div class="text-center">
 						<div>
-							<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-html="true" title="<em>Tooltip</em> <u>with</u> <b>HTML</b>">
-								Tooltip with HTML
-							  </button>
-							<label data-toggle="tooltip" data-placement="right" title="Tooltip on right">NO <- Vacunar -> SI</label>
+							
+							<label data-toggle="tooltip" data-placement="top" title="Tooltip on right">NO <- Vacunar -> SI</label>
 
 						<div id="VaccButtonH" class="col text-center align-self-center w-100">
 							
