--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -376,7 +376,7 @@
 			
 			<div class="pos-f-t">
 				
-				<nav class="navbar">
+				<nav class="navbar" style="text-align: center;">
 					<div >
 						<h6 id="universidades" class="w-100 text-white">UNTDF & UTN
 						</h6>
@@ -391,7 +391,7 @@
 
 	</div>
 
-	<!-- The Modal -->
+
 	
 
 
@@ -407,7 +407,8 @@
 						<div id="graphX"></div>
 					</div>
 				</div>
-				<div id="MainBlock2" class="container-fluid">
+			
+			<div id="MainBlock2" class="container-fluid">
 					<div id="upperLayer" hidden>
 					</div>
 					<div class="row" style="height: 15em; padding: 1em;">
@@ -516,8 +517,8 @@
 
 			</div>
 			<!-- <div id="testGH" style="width: 100%; height: 100%; overflow: hidden;position: relative; z-index: 1;display: inline-block;"></div> -->
+			</div>
 		</div>
-		
 		<!--Seccion de la pantalla de inicio con Información del Simulador-->
 		<div id="modalInicio" class="modal">
 
@@ -576,7 +577,7 @@
 			</div>
 
 		</div>		
-		
+	</div>	
 		
 
 		<script>
