--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -396,7 +396,7 @@
 
 
 	
-	<div class="row " id="containAll">
+	<div class="row " id="containAll" style="display: flex; justify-content: center;">
 		<div class="row" >
 			<div id="MainBlock1" >
 				<div class="container-fluid">
