--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -411,7 +411,7 @@
 			<div id="MainBlock2" class="container-fluid">
 					<div id="upperLayer" hidden>
 					</div>
-					<div class="row" style="height: 15em; padding: 1em;">
+					<div class="container-fluid" style="height: 15em; padding: 1em;">
 						<div class="col-12">
 							<div id="simpleCaseGraphH" 
 								style="width: 100%; height: 100%; overflow: hidden;position: absolute; z-index: 1;display: inline-block;">
@@ -433,7 +433,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="play-Info-QuarantineH" class="container mt-3">
+					<div id="play-Info-QuarantineH" class="container-fluid">
 						<div class="d-flex justify-content-around">
 								<button id = "playbutton" type="button" onclick="BotonPlayPause(event)" value="INICIO" class="btn btn-outline-primary">
 									<svg id = "iconplay" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-play-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
