Se modifican las leyendas

--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -399,7 +399,7 @@
 	<div class="row " id="containAll" style="display:flexbox; flex-direction: column; justify-content: center;">
 		<div class="row" >
 			<div id="MainBlock1" >
-				<div class="flex-lg-fill" style="text-align: center;">
+				<div class="flex-sm-fill" style="text-align: center;">
 					<div id="plotGraphH" style=" width: 120%; height: 250px; 
 						overflow: hidden;position: relative; z-index: 1; 
 						display: inline-block">
