Se modifican las leyendas

--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -402,7 +402,7 @@
 				<div class="d-block">
 					<div id="plotGraphH" style="width: 160%; height: 250px; 
 						overflow: hidden;position: relative; z-index: 1; 
-						display: inline-block">
+						display:flexbox">
 						<div id="graphY"></div>
 						<div id="graphX"></div>
 					</div>
