Se modifican las leyendas

--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -391,6 +391,10 @@
 
 	</div>
 
+	<div class="row text-light" style="background-color: #FC9630; ;" id="caseTypeNameH">
+		<span id="caseTypeName">Caso Simple: <p><small>una ciudad o pueblo, sin contacto con otras
+				poblaciones.</small></p></span>
+	</div>
 
 	
 
@@ -411,7 +415,7 @@
 			<div id="MainBlock2" class="container-fluid">
 					<div id="upperLayer" hidden>
 					</div>
-					<div class="container-fluid" style="height: 15em; padding: 1em;">
+					<div class="row" style="height: 15em; padding: 1em;">
 						<div class="col-12">
 							<div id="simpleCaseGraphH" 
 								style="width: 100%; height: 100%; overflow: hidden;position: absolute; z-index: 1;display: inline-block;">
@@ -433,7 +437,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="play-Info-QuarantineH" class="container-fluid">
+					<div id="play-Info-QuarantineH" class="container mt-3">
 						<div class="d-flex justify-content-around">
 								<button id = "playbutton" type="button" onclick="BotonPlayPause(event)" value="INICIO" class="btn btn-outline-primary">
 									<svg id = "iconplay" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-play-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
