Se modifican las leyendas

--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -406,7 +406,7 @@
 				<div class="d-block">
 					<div id="plotGraphH" style="width: 160%; height: 250px; 
 						overflow: hidden;position: relative; z-index: 1; 
-						display:inline-block">
+						display:flexbox">
 						<div id="graphY"></div>
 						<div id="graphX"></div>
 					</div>
@@ -437,7 +437,7 @@
 							</div>
 						</div>
 					</div>
-					<div id="play-Info-QuarantineH" class="container mt-3">
+					<div id="play-Info-QuarantineH" class="container mt3">
 						<div class="d-flex justify-content-around">
 								<button id = "playbutton" type="button" onclick="BotonPlayPause(event)" value="INICIO" class="btn btn-outline-primary">
 									<svg id = "iconplay" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-play-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
