Se modifican las leyendas

--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -403,7 +403,7 @@
 	<div class="row " id="containAll" style="display:flexbox; flex-direction: column; justify-content: center;">
 		<div class="row" >
 			<div id="MainBlock1" >
-				<div class="d-block">
+				<div class="container-fluid">
 					<div id="plotGraphH" style="width: 160%; height: 250px; 
 						overflow: hidden;position: relative; z-index: 1; 
 						display:flexbox">
