Se modifican las leyendas

--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -406,7 +406,7 @@
 				<div class="container-fluid">
 					<div id="plotGraphH" style="width: 160%; height: 250px; 
 						overflow: hidden;position: relative; z-index: 1; 
-						display:flexbox">
+						display:inline-block">
 						<div id="graphY"></div>
 						<div id="graphX"></div>
 					</div>
