--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -154,11 +154,11 @@
 			}
 
 			input:checked + .slider {
-			background-color: #2196F3;
+			background-color: #80FF00;
 			}
 
 			input:focus + .slider {
-			box-shadow: 0 0 1px #2196F3;
+			box-shadow: 0 0 1px #80FF00;
 			}
 
 			input:checked + .slider:before {
