--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -339,7 +339,7 @@
 
 	
 
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -368,15 +368,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="container-fluid">
+<body style="background-color: #383838;">
+	<main class="container-fluid">
 
-	<div class="row" style="background-color: #1982DC">
-	
-		<div class="pos-f-t">
-			
-			<div class="pos-f-t">
+	<div class="d-flex p-2">
+
 				
-				<nav class="navbar" style="text-align: center;">
+				<nav class="navbar">
 					<div >
 						<h6 id="universidades" class="w-100 text-white">UNTDF & UTN
 						</h6>
@@ -385,10 +383,7 @@
 							Epidemia</h7>
 					</div>  
 				</nav>
-			</div>
-
-		</div>
-
+			
 	</div>
 
 	
@@ -575,7 +570,7 @@
 		</div>		
 	</div>	
 		
-
+	</main>
 		<script>
 			document.addEventListener("DOMContentLoaded", function(event) {
 				//código a ejecutar cuando el DOM está listo para recibir acciones
