--- a/simulador/simulador-mobile.html
+++ b/simulador/simulador-mobile.html
@@ -374,7 +374,7 @@
 	<div class="d-flex p-2">
 
 				
-				<nav class="navbar">
+				<nav class="navbar" style="text-align: center;">
 					<div >
 						<h6 id="universidades" class="w-100 text-white">UNTDF & UTN
 						</h6>
